# Sample-Client-Server-App

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  ClientMain.cpp  lrb.hpp
Server/: CMakeLists.txt
Server/include/: MessageReader.h  SafeQueue.hpp
Server/src/: MessageReader.cpp  ServerMain.cpp
Socket/: CMakeLists.txt
Socket/include/: Client.h  ClientSocket.h  Server.h  ServerSocket.h  Socket.h  SocketBase.h
Socket/src/: Client.cpp  ClientSocket.cpp  Server.cpp  ServerSocket.cpp  Socket.cpp  SocketBase.cpp
Test/: CMakeLists.txt  FileGenerator.cpp  FileReader.cpp
common/: message.h
